booking page bug fixed on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1787,7 +1787,7 @@ BOOK ROOM PAGE
 .booking_page {
   background-color: var(--bg-color--);
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
